# gRNA_create

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflow/: tests.yaml
html/gRNA_create/: gRNA.html  gRNA_genetic_algorithm.html  gRNA_scorer.html  gRNA_visualize.html  index.html  pam.html  utils.html
project/: cfd.csv
src/gRNA_create/: __init__.py  gRNA.py  gRNA_genetic_algorithm.py  gRNA_scorer.py  gRNA_visualize.py  pam.py  utils.py
src/gRNA_create.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conf.py  test_gRNA.py  test_gRNA_genetic_algorithm.py  test_pam.py  test_sequences.fasta  test_sequences_large.fasta  test_sequences_neg.fasta
