[metadata]
name = gRNA_create
description = A tool to create gRNAs
author = Armaan Ahmed
author_email = aahmedresearch@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8

[options]
packages =
    gRNA_create
install_requires =
    biopython>=1
    pandas>=1
    tqdm>=4
    seaborn>=0
    pygad>=2
    numpy>=1
    matplotlib>=3
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
gRNA_create = py.typed

[flake8]
max-line-length = 160
